// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable allows extraPagination 1`] = `
<div class="datatable">
  <div class="datatable__wrapper">
    <div class="datatable__filter"><input type="text" placeholder="Filter records" class="datatable__input">
      <!---->
    </div>
    <nav class="datatable__pagination"><span class="datatable__ptext">
    Showing <span>1 – 3</span> of 3 records
      </span> <a disabled="disabled" href="#" aria-label="Previous" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul class="datatable__plist">
        <li class="datatable__pitem"><a href="#" class="datatable__plink datatable__plink--active">1</a></li>
      </ul>
    </nav>
    <div class="datatable__screen">
      <table cellspacing="0" cellpadding="0" class="datatable__content">
        <thead class="datatable__head">
          <tr>
            <th scope="col" class="datatable__column datatable__column--sortable"><span class="datatable__column-text">ID</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
            <th scope="col" class="datatable__column datatable__column--sortable datatable__column--last"><span class="datatable__column-text">Value</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
          </tr>
        </thead>
        <tbody>
          <tr class="datatable__row">
            <td class="datatable__cell">1</td>
            <td class="datatable__cell datatable__cell--last-column">value z (id-1)</td>
          </tr>
          <tr class="datatable__row datatable__row--odd">
            <td class="datatable__cell">2</td>
            <td class="datatable__cell datatable__cell--last-column">value m (id-2)</td>
          </tr>
          <tr class="datatable__row">
            <td class="datatable__cell datatable__cell--last-row">3</td>
            <td class="datatable__cell datatable__cell--last-column datatable__cell--last-row">value a (id-3)</td>
          </tr>
        </tbody>
      </table>
    </div>
    <nav class="datatable__pagination"><span class="datatable__ptext">
    Showing <span>1 – 3</span> of 3 records
      </span> <a disabled="disabled" href="#" aria-label="Previous" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul class="datatable__plist">
        <li class="datatable__pitem"><a href="#" class="datatable__plink datatable__plink--active">1</a></li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable keeps original items 1`] = `
<div class="datatable">
  <div class="datatable__wrapper">
    <div class="datatable__filter"><input type="text" placeholder="Filter records" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div class="datatable__screen">
      <table cellspacing="0" cellpadding="0" class="datatable__content">
        <thead class="datatable__head">
          <tr>
            <th scope="col" class="datatable__column"><span class="datatable__column-text">Dot-chaining field</span></th>
            <th scope="col" class="datatable__column datatable__column--last"><span class="datatable__column-text">Plain field</span></th>
          </tr>
        </thead>
        <tbody>
          <tr class="datatable__row">
            <td class="datatable__cell datatable__cell--last-row">YO</td>
            <td class="datatable__cell datatable__cell--last-column datatable__cell--last-row">lowercase me</td>
          </tr>
        </tbody>
      </table>
    </div>
    <nav class="datatable__pagination"><span class="datatable__ptext">
    Showing <span>the last record</span> of 1 records
      </span> <a disabled="disabled" href="#" aria-label="Previous" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul class="datatable__plist">
        <li class="datatable__pitem"><a href="#" class="datatable__plink datatable__plink--active">1</a></li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable works with async data 1`] = `
<div class="datatable">
  <div class="datatable__wrapper">
    <div class="datatable__filter"><input type="text" placeholder="Filter records" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div class="datatable__screen">
      <table cellspacing="0" cellpadding="0" class="datatable__content">
        <thead class="datatable__head">
          <tr>
            <th scope="col" class="datatable__column datatable__column--sortable"><span class="datatable__column-text">ID</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
            <th scope="col" class="datatable__column datatable__column--sortable datatable__column--last"><span class="datatable__column-text">Value</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
          </tr>
        </thead>
        <tbody>
          <tr class="datatable__row">
            <td class="datatable__cell">id-1</td>
            <td class="datatable__cell datatable__cell--last-column">value z (id-1)</td>
          </tr>
          <tr class="datatable__row datatable__row--odd">
            <td class="datatable__cell">id-2</td>
            <td class="datatable__cell datatable__cell--last-column">value m (id-2)</td>
          </tr>
          <tr class="datatable__row">
            <td class="datatable__cell datatable__cell--last-row">id-3</td>
            <td class="datatable__cell datatable__cell--last-column datatable__cell--last-row">value a (id-3)</td>
          </tr>
        </tbody>
      </table>
    </div>
    <nav class="datatable__pagination"><span class="datatable__ptext">
    Showing <span>1 – 3</span> of 3 records
      </span> <a disabled="disabled" href="#" aria-label="Previous" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul class="datatable__plist">
        <li class="datatable__pitem"><a href="#" class="datatable__plink datatable__plink--active">1</a></li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable works with empty data 1`] = `
<div class="datatable">
  <div class="datatable__wrapper">
    <div class="datatable__filter"><input type="text" placeholder="Filter records" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div class="datatable__screen">
      <table cellspacing="0" cellpadding="0" class="datatable__content">
        <thead class="datatable__head">
          <tr>
            <th scope="col" class="datatable__column datatable__column--sortable"><span class="datatable__column-text">ID</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
            <th scope="col" class="datatable__column datatable__column--sortable datatable__column--last"><span class="datatable__column-text">Value</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
          </tr>
        </thead>
        <tbody></tbody>
      </table>
    </div>
    <nav class="datatable__pagination"><span class="datatable__ptext">No records</span> <a disabled="disabled" href="#" aria-label="Previous" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul class="datatable__plist"></ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable works with no columns 1`] = `
<div class="datatable">
  <div class="datatable__wrapper">
    <div class="datatable__filter"><input type="text" placeholder="Filter records" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div class="datatable__screen">
      <table cellspacing="0" cellpadding="0" class="datatable__content">
        <thead class="datatable__head">
          <!---->
        </thead>
        <tbody>
          <tr class="datatable__row"></tr>
          <tr class="datatable__row datatable__row--odd"></tr>
          <tr class="datatable__row"></tr>
        </tbody>
      </table>
    </div>
    <nav class="datatable__pagination"><span class="datatable__ptext">
    Showing <span>1 – 3</span> of 3 records
      </span> <a disabled="disabled" href="#" aria-label="Previous" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul class="datatable__plist">
        <li class="datatable__pitem"><a href="#" class="datatable__plink datatable__plink--active">1</a></li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable works with sync data 1`] = `
<div class="datatable">
  <div class="datatable__wrapper">
    <div class="datatable__filter"><input type="text" placeholder="Filter records" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div class="datatable__screen">
      <table cellspacing="0" cellpadding="0" class="datatable__content">
        <thead class="datatable__head">
          <tr>
            <th scope="col" class="datatable__column datatable__column--sortable"><span class="datatable__column-text">ID</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
            <th scope="col" class="datatable__column datatable__column--sortable datatable__column--last"><span class="datatable__column-text">Value</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
          </tr>
        </thead>
        <tbody>
          <tr class="datatable__row">
            <td class="datatable__cell">id-1</td>
            <td class="datatable__cell datatable__cell--last-column">value z (id-1)</td>
          </tr>
          <tr class="datatable__row datatable__row--odd">
            <td class="datatable__cell datatable__cell--last-row">id-2</td>
            <td class="datatable__cell datatable__cell--last-column datatable__cell--last-row">value m (id-2)</td>
          </tr>
        </tbody>
      </table>
    </div>
    <nav class="datatable__pagination"><span class="datatable__ptext">
    Showing <span>1 – 2</span> of 3 records
      </span> <a disabled="disabled" href="#" aria-label="Previous" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a href="#" aria-label="Next" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul class="datatable__plist">
        <li class="datatable__pitem"><a href="#" class="datatable__plink datatable__plink--active">1</a></li>
        <li class="datatable__pitem"><a href="#" class="datatable__plink">2</a></li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable works with sync data 2`] = `
<div class="datatable">
  <div class="datatable__wrapper">
    <div class="datatable__filter"><input type="text" placeholder="Filter records" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div class="datatable__screen">
      <table cellspacing="0" cellpadding="0" class="datatable__content">
        <thead class="datatable__head">
          <tr>
            <th scope="col" class="datatable__column datatable__column--sortable"><span class="datatable__column-text">ID</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
            <th scope="col" class="datatable__column datatable__column--sortable datatable__column--last"><span class="datatable__column-text">Value</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
          </tr>
        </thead>
        <tbody></tbody>
      </table>
    </div>
    <nav class="datatable__pagination"><span class="datatable__ptext">No records</span> <a disabled="disabled" href="#" aria-label="Previous" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a href="#" aria-label="Next" class="datatable__plink datatable__pnext" disabled="disabled"><span aria-hidden="true">»</span></a>
      <ul class="datatable__plist"></ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable works with sync data using function 1`] = `
<div class="datatable">
  <div class="datatable__wrapper">
    <div class="datatable__filter"><input type="text" placeholder="Filter records" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div class="datatable__screen">
      <table cellspacing="0" cellpadding="0" class="datatable__content">
        <thead class="datatable__head">
          <tr>
            <th scope="col" class="datatable__column datatable__column--sortable"><span class="datatable__column-text">ID</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
            <th scope="col" class="datatable__column datatable__column--sortable datatable__column--last"><span class="datatable__column-text">Value</span><svg version="1.1" width="12" height="16" viewBox="0 0 12 16" aria-hidden="true" class="octicon octicon-three-bars datatable__column-icon">
                <path fill-rule="evenodd" d="M11.41 9H.59C0 9 0 8.59 0 8c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zm0-4H.59C0 5 0 4.59 0 4c0-.59 0-1 .59-1H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1h.01zM.59 11H11.4c.59 0 .59.41.59 1 0 .59 0 1-.59 1H.59C0 13 0 12.59 0 12c0-.59 0-1 .59-1z"></path>
              </svg></th>
          </tr>
        </thead>
        <tbody>
          <tr class="datatable__row">
            <td class="datatable__cell">id-1</td>
            <td class="datatable__cell datatable__cell--last-column">value z (id-1)</td>
          </tr>
          <tr class="datatable__row datatable__row--odd">
            <td class="datatable__cell">id-2</td>
            <td class="datatable__cell datatable__cell--last-column">value m (id-2)</td>
          </tr>
          <tr class="datatable__row">
            <td class="datatable__cell datatable__cell--last-row">id-3</td>
            <td class="datatable__cell datatable__cell--last-column datatable__cell--last-row">value a (id-3)</td>
          </tr>
        </tbody>
      </table>
    </div>
    <nav class="datatable__pagination"><span class="datatable__ptext">
    Showing <span>1 – 3</span> of 3 records
      </span> <a disabled="disabled" href="#" aria-label="Previous" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a disabled="disabled" href="#" aria-label="Next" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul class="datatable__plist">
        <li class="datatable__pitem"><a href="#" class="datatable__plink datatable__plink--active">1</a></li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`DataTable works with vue-i18n 1`] = `
<div class="datatable">
  <div class="datatable__wrapper">
    <div class="datatable__filter"><input type="text" placeholder="teible.filter" class="datatable__input">
      <!---->
    </div>
    <!---->
    <div class="datatable__screen">
      <table cellspacing="0" cellpadding="0" class="datatable__content">
        <thead class="datatable__head">
          <!---->
        </thead>
        <tbody>
          <tr class="datatable__row"></tr>
          <tr class="datatable__row datatable__row--odd"></tr>
        </tbody>
      </table>
    </div>
    <nav class="datatable__pagination"><span class="datatable__ptext">
    teible.showing <span>1 – 2</span> teible.total-3
      </span> <a disabled="disabled" href="#" aria-label="Previous" class="datatable__plink datatable__pprevious"><span aria-hidden="true">«</span></a> <a href="#" aria-label="Next" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
      <ul class="datatable__plist">
        <li class="datatable__pitem"><a href="#" class="datatable__plink datatable__plink--active">1</a></li>
        <li class="datatable__pitem"><a href="#" class="datatable__plink">2</a></li>
      </ul>
    </nav>
  </div>
</div>
`;
